FSI_AMD_Final.ipynb

--- a/FSI_AMD_Final.ipynb
+++ b/FSI_AMD_Final.ipynb
@@ -66,8 +66,8 @@
       "source": [
         "#connecting to Kaggle\n",
         "import os\n",
-        "os.environ['KAGGLE_USERNAME'] = 'spandanaadivishnu'  # Replace with your Kaggle username\n",
-        "os.environ['KAGGLE_KEY'] = '8d3c204e53d31936a01bf20908e19c7a'  # Replace with your Kaggle key"
+        "os.environ['KAGGLE_USERNAME'] = 'xxxxxxxx'  # Replace with your Kaggle username\n",
+        "os.environ['KAGGLE_KEY'] = 'xxxxxxxxxxx'  # Replace with your Kaggle key"
       ]
     },
     {
